--- a/code/button.html
+++ b/code/button.html
@@ -55,26 +55,20 @@
                         </div>
                         <h3>States</h3>
                         <div>
-                            <h4>Focus</h4>
-                            <div class="ui input focus">
-                              <input type="text" placeholder="Place holder..." />
-                            </div>
                             <h4>Active</h4>
-                            <div class="ui input down">
-                              <input type="text" placeholder="Place holder..." />
-                            </div>
-                            <h4>Error</h4>
-                            <div class="ui input error">
-                              <input type="text" placeholder="Place holder..." />
-                            </div>
+                            <button class="ui-button active">Button</button>
+                            <h4>Hover</h4>
+                            <button class="ui-button hover">Hover</button>
                             <h4>Disabled</h4>
-                            <div class="ui input">
-                              <input disabled="disabled" type="text" placeholder="Place holder..." />
-                            </div>
-                            <h4>Read Only</h4>
-                            <div class="ui input">
-                              <input readonly="readonly" type="text" placeholder="Place holder..." />
-                            </div>
+                            <button class="ui-button" disabled="disabled">Hover</button>
+                            <button class="ui-button" disabled="disabled">
+                                <i class="icon fa fa-users"></i> Users
+                            </button>
+                        </div>
+                        <h3>States</h3>
+                        <div>
+                            <h4>Fluid</h4>
+                            <button class="ui-button fluid">Button</button>
                         </div>
                         <h3>With Icons</h3>
                         <div>
