--- a/code/index.html
+++ b/code/index.html
@@ -1132,6 +1132,7 @@
                     </div>
                 </div>
             </div>
+            </div>
         </div>
     </body>
 </html>
