add button and input.

--- a/code/button.html
+++ b/code/button.html
@@ -65,70 +65,39 @@
                                 <i class="icon fa fa-users"></i> Users
                             </button>
                         </div>
-                        <h3>States</h3>
+                        <h3>扩展颜色</h3>
                         <div>
-                            <h4>Fluid</h4>
-                            <button class="ui-button fluid">Button</button>
+                            <h4>Button Colors</h4>
+                            <button class="ui-button primary">primary</button>
+                            <button class="ui-button success">success</button>
+                            <button class="ui-button error">error</button>
+                            <button class="ui-button warning ">warning </button>
+                            <button class="ui-button secondary ">secondary </button>
                         </div>
-                        <h3>With Icons</h3>
+                        <h3>Sizes</h3>
                         <div>
-                            <h4>Left</h4>
-                            <div class="ui left icon input">
-                                <input type="text" placeholder="Search users...">
-                                <i class="fa fa-user icon"></i>
+                            <h4>Button Colors</h4>
+                            <button class="ui-button mini"><i class="icon fa fa-users"></i> success</button>
+                            <button class="ui-button small"><i class="icon fa fa-users"></i> error</button>
+                            <button class="ui-button large"><i class="icon fa fa-users"></i> warning </button>
+                            <button class="ui-button big"><i class="icon fa fa-users"></i> secondary </button>
+                            <button class="ui-button huge"><i class="icon fa fa-users"></i> secondary </button>
+                            <button class="ui-button massive"><i class="icon fa fa-users"></i> secondary </button>
+                        </div>
+                        <h3>Group</h3>
+                        <div>
+                            <h4>Button Group</h4>
+                            <div class="ui-button-group clearfix">
+                              <button type="button" class="ui-button">Left</button>
+                              <button type="button" class="ui-button active">Middle</button>
+                              <button type="button" class="ui-button">Right</button>
                             </div>
-                            <h4>Right</h4>
-                            <div class="ui right icon input">
-                                <input type="text" placeholder="Search users...">
-                                <i class="fa fa-search icon"></i>
-                            </div> 
-                            <h4>Link Icon</h4>
-                            <div class="ui right icon input">
-                                <input type="text" placeholder="Search users...">
-                                <i class="fa fa-search link icon"></i>
-                            </div>
-                            <h4>With Buttons (TODO)</h4>
-                            <div>
-                                display buttons.
-                            </div>
-                            <h4>Fluid</h4>
-                           <div class="ui fluid right icon input">
-                                <input type="text" placeholder="Search users...">
-                                <i class="fa fa-search link icon"></i>
-                            </div>
-                            <h4>Sizes</h4>
-                            <div>
-                                <div class="ui right icon input small">
-                                    <input type="text" placeholder="small">
-                                    <i class="fa fa-search link icon"></i>
-                                </div>
-                            </div>
-                            <div class="mt1">
-                                <div class="ui right icon input">
-                                    <input type="text" placeholder="nomral">
-                                    <i class="fa fa-search link icon"></i>
-                                </div>
-                            </div>
-                            <div class="mt1">
-                                <div class="ui right icon input big">
-                                    <input type="text" placeholder="big">
-                                    <i class="fa fa-search link icon"></i>
-                                </div>
-                            </div>
-                            <div class="mt1">
-                                <div class="ui right icon input huge">
-                                    <input type="text" placeholder="huge">
-                                    <i class="fa fa-search link icon"></i>
-                                </div>
-                            </div>
-                            <div class="mt1">
-                                <div class="ui right icon input massive">
-                                    <input type="text" placeholder="massive">
-                                    <i class="fa fa-search link icon"></i>
-                                </div>
-                            </div>
-                             <div class="mt1">
-                                TODO with action
+                            <h4>Icon Group</h4>
+                            <div class="ui-button-group clearfix">
+                                <button class="ui-button icon"><i class="icon fa fa-cloud-download"></i></button>
+                                <button class="ui-button icon"><i class="icon fa fa-users"></i></button>
+                                <button class="ui-button icon"><i class="icon fa fa-cloud-download"></i></button>
+                                <button class="ui-button icon"><i class="icon fa fa-users"></i></button>
                             </div>
                         </div>
                     </div>
