--- a/code/input.html
+++ b/code/input.html
@@ -28,47 +28,47 @@
                         <h3>Types</h3>
                         <div>
                             <h4>Standard Input</h4>
-                            <div class="ui input">
+                            <div class="ui-input">
                               <input type="text" placeholder="Place holder..." />
                             </div>
                         </div>
                         <h3>States</h3>
                         <div>
                             <h4>Focus</h4>
-                            <div class="ui input focus">
+                            <div class="ui-input focus">
                               <input type="text" placeholder="Place holder..." />
                             </div>
                             <h4>Active</h4>
-                            <div class="ui input down">
+                            <div class="ui-input down">
                               <input type="text" placeholder="Place holder..." />
                             </div>
                             <h4>Error</h4>
-                            <div class="ui input error">
+                            <div class="ui-input error">
                               <input type="text" placeholder="Place holder..." />
                             </div>
                             <h4>Disabled</h4>
-                            <div class="ui input">
+                            <div class="ui-input">
                               <input disabled="disabled" type="text" placeholder="Place holder..." />
                             </div>
                             <h4>Read Only</h4>
-                            <div class="ui input">
+                            <div class="ui-input">
                               <input readonly="readonly" type="text" placeholder="Place holder..." />
                             </div>
                         </div>
                         <h3>With Icons</h3>
                         <div>
                             <h4>Left</h4>
-                            <div class="ui left icon input">
+                            <div class="ui-input left icon">
                                 <input type="text" placeholder="Search users...">
                                 <i class="fa fa-user icon"></i>
                             </div>
                             <h4>Right</h4>
-                            <div class="ui right icon input">
+                            <div class="ui-input right icon">
                                 <input type="text" placeholder="Search users...">
                                 <i class="fa fa-search icon"></i>
                             </div> 
                             <h4>Link Icon</h4>
-                            <div class="ui right icon input">
+                            <div class="ui-input right icon">
                                 <input type="text" placeholder="Search users...">
                                 <i class="fa fa-search link icon"></i>
                             </div>
@@ -77,37 +77,37 @@
                                 display buttons.
                             </div>
                             <h4>Fluid</h4>
-                           <div class="ui fluid right icon input">
+                           <div class="ui-input fluid right icon">
                                 <input type="text" placeholder="Search users...">
                                 <i class="fa fa-search link icon"></i>
                             </div>
                             <h4>Sizes</h4>
                             <div>
-                                <div class="ui right icon input small">
+                                <div class="ui-input right icon small">
                                     <input type="text" placeholder="small">
                                     <i class="fa fa-search link icon"></i>
                                 </div>
                             </div>
                             <div class="mt1">
-                                <div class="ui right icon input">
+                                <div class="ui-input right icon">
                                     <input type="text" placeholder="nomral">
                                     <i class="fa fa-search link icon"></i>
                                 </div>
                             </div>
                             <div class="mt1">
-                                <div class="ui right icon input big">
+                                <div class="ui-input right icon big">
                                     <input type="text" placeholder="big">
                                     <i class="fa fa-search link icon"></i>
                                 </div>
                             </div>
                             <div class="mt1">
-                                <div class="ui right icon input huge">
+                                <div class="ui-input right icon huge">
                                     <input type="text" placeholder="huge">
                                     <i class="fa fa-search link icon"></i>
                                 </div>
                             </div>
                             <div class="mt1">
-                                <div class="ui right icon input massive">
+                                <div class="ui-input right icon massive">
                                     <input type="text" placeholder="massive">
                                     <i class="fa fa-search link icon"></i>
                                 </div>
