--- a/code/checkbox.html
+++ b/code/checkbox.html
@@ -23,31 +23,33 @@
             </div>
             <div class="ui-u-4-5">
                 <div id="main" class="content p2 no-pt">
-                    <h2 id="icons" class="content-subhead">Checkbox</h2>
+                    <h2 id="icons" class="content-subhead">类型</h2>
                     <div>
                         <h3>Checkbox</h3>
                         <div class="ui checkbox">
                           <input type="checkbox" id="unique-id">
                           <label for="unique-id">Poodle</label>
                         </div>
-                        <div class="ui checkbox">
-                          <input type="checkbox" id="unique-id2">
-                          <label for="unique-id2">Poodle</label>
-                        </div>
-                        <h3>Radio</h3>
-                        <div class="ui radio checkbox">
-                          <input type="radio" id="unique-id3" name="radio1" />
-                          <label for="unique-id3">Radio</label>
-                        </div>
-                        <div class="ui radio checkbox">
-                          <input type="radio" id="unique-id4" name="radio1" />
-                          <label for="unique-id4"></label>
-                        </div>
                         <h3>Slider</h3>
                         <div class="ui slider checkbox">
                             <input type="checkbox" name="walk" id="slider" />
                             <label for="slider">Allow others to see when your dog is on a walk</label>
                         </div>
+                        <h3>toggle</h3>
+                        <div class="ui toggle checkbox">
+                            <input type="checkbox" name="walk" id="toggle" />
+                            <label for="toggle">Allow others to see when your dog is on a walk</label>
+                        </div>
+                    </div>
+                    <h2 id="icons" class="content-subhead">Radio</h2>
+                    <h3>Radio</h3>
+                    <div class="ui radio checkbox">
+                      <input type="radio" id="unique-id3" name="radio1" />
+                      <label for="unique-id3">Radio</label>
+                    </div>
+                    <div class="ui radio checkbox">
+                      <input type="radio" id="unique-id4" name="radio1" />
+                      <label for="unique-id4"></label>
                     </div>
                 </div>
             </div>
